# Corrective-RAG

./: .gitignore  ingestion.py  main.py  pyproject.toml
.chroma/: chroma.sqlite3
graph/: graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
